--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ p{color:#434343;line-height:1.6;}
     .sar-page.active{display:block}
 
     /* Inputs */
-    .sar-row-fields{gap:12px}
+    .sar-row-fields{display:flex;flex-direction:column;gap:10px}
     .sar-field{flex:1;min-width:0;display:flex;flex-direction:column;gap:6px}
     .sar-label{font-size:12px;color:#6B7280}
     .sar-input{
@@ -103,7 +103,7 @@ p{color:#434343;line-height:1.6;}
 
     /* Hotels one row */
     .sar-hotels{display:flex;gap:6px;flex-wrap:nowrap;justify-content:space-between;align-items:stretch}
-    .sar-hotels .sar-hotel{flex:1 1 16%;min-width:0;text-transform:uppercase;font-weight:600;padding:10px 0;font-size:14px}
+    .sar-hotels .sar-hotel{flex:1 1 0;min-width:0;text-transform:uppercase;font-weight:600;padding:8px 0;font-size:13px}
     .sar-hotel.selected{background:var(--brand);color:#fff;border-color:var(--brand)}
 
     /* Intro & scale (welcome) */
@@ -173,6 +173,9 @@ p{color:#434343;line-height:1.6;}
 /* Lock welcome page bottom spacing: remove one gap between scale and actions (50% reduction) */
 .sar-page[data-step="welcome"] .sar-scale + .sar-gap-3 { display:none !important; }
 
+/* Force full-width inputs on welcome */
+.sar-page[data-step="welcome"] .sar-input{width:100%}
+.sar-page[data-step="welcome"] .sar-field{width:100%}
 </style>
 <!-- EmailJS SDK (Option 2: automatic email sending) -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -229,11 +232,6 @@ p{color:#434343;line-height:1.6;}
 <button class="sar-btn sar-hotel" data-hotel="FLY">FLY</button>
 <button class="sar-btn sar-hotel" data-hotel="BED">BED</button>
 </div>
-<div class="sar-actions">
-  <button class="sar-btn primary" data-nav="goto" data-step="intro" id="toIntro">next</button>
-</div>
-</div>
-<div class="sar-page" data-step="intro">
 <div class="sar-intro" style="margin-bottom:8px">
 <p>Self-assessment helps your personal growth and development. Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know your own strengths and opportunities.</p>
 </div>
@@ -251,8 +249,6 @@ p{color:#434343;line-height:1.6;}
 </div>
 </div>
 <!-- Part 1 — Dynamic questions -->
-
-</div>
 <div class="sar-page" data-step="q1">
 <!-- removed page-level thin progress bar (now in header) -->
 <div aria-live="polite" class="q-list" id="q1List"></div>
@@ -359,7 +355,7 @@ p{color:#434343;line-height:1.6;}
 </section>
 </main>
 <script>
-    const SAR_STEPS = ["welcome","intro","intro","q1","q2","score","peer","done","finish"];
+    const SAR_STEPS = ["welcome","q1","q2","score","peer","done","finish"];
 
     const sarState = {
       step: "welcome",
@@ -422,7 +418,7 @@ p{color:#434343;line-height:1.6;}
       const card = document.querySelector('.sar-page[data-step="welcome"]');
       const nick = card.querySelector('#sarNick');
       const email = card.querySelector('#sarEmail');
-      const startBtn = card.querySelector('#toIntro') || card.querySelector('#sarStart');
+      const startBtn = card.querySelector('#sarStart');
 
       card.addEventListener('click',(e)=>{
         const btn = e.target.closest('.sar-hotel');
@@ -437,20 +433,12 @@ p{color:#434343;line-height:1.6;}
       startBtn.addEventListener('click',(e)=>{ if(startBtn.disabled){ e.preventDefault(); e.stopPropagation(); } });
       validateWelcome();
     }
-      if(startBtn && !startBtn.dataset.bound){
-        startBtn.dataset.bound = "1";
-        startBtn.addEventListener('click', function(){
-          if(startBtn.disabled) return;
-          goTo('intro');
-        });
-      }
-
     function validateWelcome(){
       const card = document.querySelector('.sar-page[data-step="welcome"]');
       if(!card) return;
       const nick = card.querySelector('#sarNick');
       const email = card.querySelector('#sarEmail');
-      const startBtn = card.querySelector('#toIntro') || card.querySelector('#sarStart');
+      const startBtn = card.querySelector('#sarStart');
       const hasNick = (nick.value || "").trim().length > 0;
       const hasEmail = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test((email.value || "").trim());
       const hasHotel = !!sarState.user.hotel;
@@ -467,7 +455,7 @@ p{color:#434343;line-height:1.6;}
 
     async function renderQ1(){
       const qs = await loadQuestions();
-      const slice = qs.slice(0, 18);
+      const slice = qs.slice(0, 16);
       const mount = document.getElementById('q1List');
       mount.innerHTML = slice.map(q => renderQuestionHTML(q)).join('');
       slice.forEach(q => {
@@ -481,7 +469,7 @@ p{color:#434343;line-height:1.6;}
 
     async function renderQ2(){
       const qs = await loadQuestions();
-      const slice = qs.slice(18, qs.length);
+      const slice = qs.slice(16, 32);
       const mount = document.getElementById('q2List');
       mount.innerHTML = slice.map(q => renderQuestionHTML(q)).join('');
       slice.forEach(q => {
@@ -1082,7 +1070,7 @@ ok.onclick = function(){
       if(!card) return;
       const nick = card.querySelector('#sarNick');
       const email = card.querySelector('#sarEmail');
-      const startBtn = card.querySelector('#toIntro') || card.querySelector('#sarStart');
+      const startBtn = card.querySelector('#sarStart');
       if(!window.sarState) window.sarState = { user:{}, answers:{}, questions:[], step:'welcome' };
       if(!window.sarState.user) window.sarState.user = {};
 
@@ -1311,213 +1299,163 @@ ok.onclick = function(){
   <script id="embeddedQuestions" type="application/json">[
   {
     "id": "q1",
-    "statement": "1. I answer very quickly to guest messages",
-    "subtext": "I often check and reply right away",
-    "weight": 1.0
+    "statement": "1. I reply to guests very quickly",
+    "subtext": "I often check for messages and answer right away"
   },
   {
     "id": "q2",
     "statement": "2. I make my replies warm and personal",
-    "subtext": "I use their name and add helpful information",
-    "weight": 1.0
+    "subtext": "I use their name and add helpful information"
   },
   {
     "id": "q3",
     "statement": "3. I make a great first impression",
-    "subtext": "I know it starts with the first message",
-    "weight": 0.5
+    "subtext": "I know that starts from the very first message"
   },
   {
     "id": "q4",
     "statement": "4. I can see if a guest is stressed or relaxed",
-    "subtext": "I adjust the way I check-in to the mood",
-    "weight": 2.0
+    "subtext": "I adjust the way I check-in to the mood"
   },
   {
     "id": "q5",
     "statement": "5. I ask questions before I ask passports",
-    "subtext": "I welcome guests like friends",
-    "weight": 2.0
+    "subtext": "I welcome guests like friends"
   },
   {
     "id": "q6",
     "statement": "6. I can check-in a guest in 60 seconds",
-    "subtext": "I timed three standard check-ins",
-    "weight": 1.0
+    "subtext": "I timed this three times with standard check-ins"
   },
   {
     "id": "q7",
     "statement": "7. I check in groups differently than FIT",
-    "subtext": "I usually check-in groups with the leader",
-    "weight": 0.5
+    "subtext": "I usually check-in groups with the leader"
   },
   {
     "id": "q8",
-    "statement": "8. I don't say that check-in time is 14:00",
-    "subtext": "Guests can check-in when the room is ready",
-    "weight": 1.5
+    "statement": "8. I don't tell guests that check-in time is 14:00",
+    "subtext": "They can check-in as soon as the room is ready"
   },
   {
     "id": "q9",
-    "statement": "9. I dont show stress when there is a problem",
-    "subtext": "I know that makes guests really worry",
-    "weight": 2.0
+    "statement": "9. I don't show stress when there is a problem",
+    "subtext": "I know that makes guests really worry"
   },
   {
     "id": "q10",
     "statement": "10. I show genuine interest during check-out",
-    "subtext": "I ask about their stay or next destination",
-    "weight": 1.0
+    "subtext": "I ask about their stay or next destination"
   },
   {
     "id": "q11",
     "statement": "11. I make great last impressions",
-    "subtext": "I walk them out and wait until their car has left",
-    "weight": 2.0
+    "subtext": "I walk them out and wait until their car has left"
   },
   {
     "id": "q12",
     "statement": "12. I use names to connect with guests",
-    "subtext": "When it feels right I introduce myself",
-    "weight": 0.5
+    "subtext": "When it feels right I tell my name and use theirs"
   },
   {
     "id": "q13",
     "statement": "13. I scan every guest every time",
-    "subtext": "I dont look at a group but at each individual",
-    "weight": 2.0
+    "subtext": "I don't look at a group but at each individual"
   },
   {
     "id": "q14",
     "statement": "14. I am good at scanning",
-    "subtext": "I see what people need before they ask",
-    "weight": 2.0
+    "subtext": "I see what people need before they ask"
   },
   {
     "id": "q15",
     "statement": "15. I create unique surprises for guests",
-    "subtext": "I do more than offering free things",
-    "weight": 2.0
+    "subtext": "I do more than offering free things"
   },
   {
     "id": "q16",
     "statement": "16. Music is an essential part of the vibe",
-    "subtext": "I listen to make sure we play the right music",
-    "weight": 0.5
+    "subtext": "I listen to make sure we play the right music"
   },
   {
     "id": "q17",
-    "statement": "17. I tell guests they can use other BED facilities",
-    "subtext": "I offer downtown coffee, big pool or breakfast",
-    "weight": 1.5
+    "statement": "17. I invite guests to share other BED facilities",
+    "subtext": "I offer downtown coffee, bigger pool or breakfast"
   },
   {
     "id": "q18",
-    "statement": "18. It's annoying when a room key doesn't work",
-    "subtext": "I go up to make sure the new key works",
-    "weight": 2.0
+    "statement": "18. its annoying when a room key doesn't work",
+    "subtext": "I go up to make sure the new key works"
   },
   {
     "id": "q19",
     "statement": "19. I talk with guests because I am interested",
-    "subtext": "When I force myself it will not be real",
-    "weight": 1.0
+    "subtext": "When I force myself it will not be real"
   },
   {
     "id": "q20",
     "statement": "20. I often give my friends honest feedback",
-    "subtext": "Im happy to help them to grow",
-    "weight": 1.5
+    "subtext": "I’m happy to help them to grow"
   },
   {
     "id": "q21",
     "statement": "21. My friends often give me honest feedback",
-    "subtext": "I'm happy they help me to grow",
-    "weight": 1.0
+    "subtext": "I’m happy they help me to grow"
   },
   {
     "id": "q22",
     "statement": "22. I can answer most questions about BED",
-    "subtext": "I have visited the rooms in all our hotels",
-    "weight": 0.5
+    "subtext": "I have visited the rooms in all our hotels"
   },
   {
     "id": "q23",
-    "statement": "23. I understand the meaning of showtime",
-    "subtext": "The magic happens from 0700-1000",
-    "weight": 0.5
+    "statement": "23. I understand the meaning of \"showtime\"",
+    "subtext": "The magic happens from 07:00-10:00"
   },
   {
     "id": "q24",
-    "statement": "24. I have peeled my own onion",
-    "subtext": "I dont act. Usually I show my true self",
-    "weight": 1.5
+    "statement": "24. I know the story of \"peeling the onion\"",
+    "subtext": "I don't act. Usually I show my true self"
   },
   {
     "id": "q25",
-    "statement": "25. I use ChatGPT or Gemini",
-    "subtext": "I ask for help with e.g., guest messages",
-    "weight": 0.5
+    "statement": "25. I never gossip. I signed “I Promise”",
+    "subtext": "I don't talk bad when someone's not here"
   },
   {
     "id": "q26",
-    "statement": "26. I send messages that look like I wrote them",
-    "subtext": "I don't copy AI because guests will know",
-    "weight": 1.5
+    "statement": "26. I really understand that rules can be flexible",
+    "subtext": "Without reasons many rules just disappear"
   },
   {
     "id": "q27",
-    "statement": "27. I use ChatGPT or Gemini",
-    "subtext": "I ask help to analyze and solve problems",
-    "weight": 1.5
+    "statement": "27. I am confident about my own judgment",
+    "subtext": "I make decisions without asking permission"
   },
   {
     "id": "q28",
-    "statement": "28. I never gossip. I signed I Promise",
-    "subtext": "I dont talk badly when someones not here",
-    "weight": 2.0
+    "statement": "28. I look after the rooms and public areas",
+    "subtext": "I share responsibility for the whole hotel"
   },
   {
     "id": "q29",
-    "statement": "29. I really understand that rules can be flexible",
-    "subtext": "Without reasons many rules just disappear",
-    "weight": 1.0
+    "statement": "29. I look around when I arrive at the hotel",
+    "subtext": "I share responsibility for the whole hotel"
   },
   {
     "id": "q30",
-    "statement": "30. I am confident about my own judgment",
-    "subtext": "I make decisions without asking permission",
-    "weight": 1.0
+    "statement": "30. I don't pass problems to others but act myself",
+    "subtext": "I follow up later to make sure it's fixed"
   },
   {
     "id": "q31",
-    "statement": "31. I look after the whole hotel, not only front",
-    "subtext": "I include rooms, maintenance and back areas",
-    "weight": 2.0
+    "statement": "31. I am not afraid of the CEO or my coach",
+    "subtext": "I know I am allowed to make mistakes"
   },
   {
     "id": "q32",
-    "statement": "32. I look around when I arrive at the hotel",
-    "subtext": "I share responsibility for the whole hotel",
-    "weight": 0.5
-  },
-  {
-    "id": "q33",
-    "statement": "33. I don't pass issues to others but act myself",
-    "subtext": "I follow up later to make sure it's fixed",
-    "weight": 1.0
-  },
-  {
-    "id": "q34",
-    "statement": "34. I am not afraid of the CEO or my coach",
-    "subtext": "I know I am allowed to make mistakes",
-    "weight": 1.0
-  },
-  {
-    "id": "q35",
-    "statement": "35. I have no manuals that show me what to do",
-    "subtext": "That means I cannot do anything wrong",
-    "weight": 0.5
+    "statement": "32. I have no manuals that show me what to do",
+    "subtext": "That means I cannot do anything wrong"
   }
 ]</script>
 
