--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ p{color:#434343;line-height:1.6;}
     .sar-page.active{display:block}
 
     /* Inputs */
-    .sar-row-fields{display:flex;flex-direction:column;gap:10px}
+    .sar-row-fields{gap:12px}
     .sar-field{flex:1;min-width:0;display:flex;flex-direction:column;gap:6px}
     .sar-label{font-size:12px;color:#6B7280}
     .sar-input{
@@ -102,8 +102,8 @@ p{color:#434343;line-height:1.6;}
     @media (max-width:420px){ .sar-row-fields{flex-direction:column} }
 
     /* Hotels one row */
-    .sar-hotels{display:flex;gap:6px;flex-wrap:nowrap;justify-content:space-between;align-items:stretch}
-    .sar-hotels .sar-hotel{flex:1 1 0;min-width:0;text-transform:uppercase;font-weight:600;padding:8px 0;font-size:13px}
+    .sar-hotels{display:flex;gap:6px;flex-wrap:nowrap;justify-content:space-between}
+    .sar-hotels .sar-hotel{flex:1 1 18%;min-width:0;text-transform:uppercase;font-weight:600;padding:10px 0;font-size:14px}
     .sar-hotel.selected{background:var(--brand);color:#fff;border-color:var(--brand)}
 
     /* Intro & scale (welcome) */
@@ -173,9 +173,6 @@ p{color:#434343;line-height:1.6;}
 /* Lock welcome page bottom spacing: remove one gap between scale and actions (50% reduction) */
 .sar-page[data-step="welcome"] .sar-scale + .sar-gap-3 { display:none !important; }
 
-/* Force full-width inputs on welcome */
-.sar-page[data-step="welcome"] .sar-input{width:100%}
-.sar-page[data-step="welcome"] .sar-field{width:100%}
 </style>
 <!-- EmailJS SDK (Option 2: automatic email sending) -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -232,6 +229,14 @@ p{color:#434343;line-height:1.6;}
 <button class="sar-btn sar-hotel" data-hotel="FLY">FLY</button>
 <button class="sar-btn sar-hotel" data-hotel="BED">BED</button>
 </div>
+
+</div>
+
+<div class="sar-actions">
+  <button class="sar-btn primary" data-nav="goto" data-step="intro" id="toIntro">next</button>
+</div>
+
+<div class="sar-page" data-step="intro">
 <div class="sar-intro" style="margin-bottom:8px">
 <p>Self-assessment helps your personal growth and development. Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know your own strengths and opportunities.</p>
 </div>
@@ -244,11 +249,13 @@ p{color:#434343;line-height:1.6;}
 </div>
 <div class="sar-gap-3"></div>
 <div class="sar-gap-3"></div>
-<div class="sar-actions">
-<button class="sar-btn primary" data-nav="goto" data-step="q1" disabled="" id="sarStart">start</button>
-</div>
 </div>
 <!-- Part 1 — Dynamic questions -->
+
+<div class="sar-actions">
+  <button class="sar-btn primary" data-nav="goto" data-step="q1" id="sarStart">start</button>
+</div>
+</div>
 <div class="sar-page" data-step="q1">
 <!-- removed page-level thin progress bar (now in header) -->
 <div aria-live="polite" class="q-list" id="q1List"></div>
@@ -355,7 +362,7 @@ p{color:#434343;line-height:1.6;}
 </section>
 </main>
 <script>
-    const SAR_STEPS = ["welcome","q1","q2","score","peer","done","finish"];
+    const SAR_STEPS = ["welcome","intro","q1","q2","score","peer","done","finish"];
 
     const sarState = {
       step: "welcome",
@@ -418,7 +425,7 @@ p{color:#434343;line-height:1.6;}
       const card = document.querySelector('.sar-page[data-step="welcome"]');
       const nick = card.querySelector('#sarNick');
       const email = card.querySelector('#sarEmail');
-      const startBtn = card.querySelector('#sarStart');
+      const startBtn = card.querySelector('#toIntro') || card.querySelector('#sarStart');
 
       card.addEventListener('click',(e)=>{
         const btn = e.target.closest('.sar-hotel');
@@ -438,7 +445,7 @@ p{color:#434343;line-height:1.6;}
       if(!card) return;
       const nick = card.querySelector('#sarNick');
       const email = card.querySelector('#sarEmail');
-      const startBtn = card.querySelector('#sarStart');
+      const startBtn = card.querySelector('#toIntro') || card.querySelector('#sarStart');
       const hasNick = (nick.value || "").trim().length > 0;
       const hasEmail = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test((email.value || "").trim());
       const hasHotel = !!sarState.user.hotel;
@@ -1070,7 +1077,7 @@ ok.onclick = function(){
       if(!card) return;
       const nick = card.querySelector('#sarNick');
       const email = card.querySelector('#sarEmail');
-      const startBtn = card.querySelector('#sarStart');
+      const startBtn = card.querySelector('#toIntro') || card.querySelector('#sarStart');
       if(!window.sarState) window.sarState = { user:{}, answers:{}, questions:[], step:'welcome' };
       if(!window.sarState.user) window.sarState.user = {};
 
