--- a/index.html
+++ b/index.html
@@ -260,10 +260,6 @@ p{color:#434343;line-height:1.6;}
 <!-- removed page-level thin progress bar (now in header) -->
 <div aria-live="polite" class="q-list" id="q1List"></div>
 <div class="sar-gap-3"></div>
-<div class="sar-actions">
-<button class="sar-btn" data-nav="back">Back</button>
-<button class="sar-btn primary" data-nav="goto" data-step="q2" disabled="" id="q1Next">Next</button>
-</div>
 </div>
 <!-- Part 2 — Dynamic questions -->
 <div class="sar-page" data-step="q2">
@@ -462,7 +458,7 @@ p{color:#434343;line-height:1.6;}
 
     async function renderQ1(){
       const qs = await loadQuestions();
-      const slice = qs.slice(0, 16);
+      const slice = qs.slice(0, 18);
       const mount = document.getElementById('q1List');
       mount.innerHTML = slice.map(q => renderQuestionHTML(q)).join('');
       slice.forEach(q => {
@@ -476,7 +472,7 @@ p{color:#434343;line-height:1.6;}
 
     async function renderQ2(){
       const qs = await loadQuestions();
-      const slice = qs.slice(16, 32);
+      const slice = qs.slice(18, qs.length);
       const mount = document.getElementById('q2List');
       mount.innerHTML = slice.map(q => renderQuestionHTML(q)).join('');
       slice.forEach(q => {
@@ -1306,163 +1302,213 @@ ok.onclick = function(){
   <script id="embeddedQuestions" type="application/json">[
   {
     "id": "q1",
-    "statement": "1. I reply to guests very quickly",
-    "subtext": "I often check for messages and answer right away"
+    "statement": "1. I answer very quickly to guest messages",
+    "subtext": "I often check and reply right away",
+    "weight": 1.0
   },
   {
     "id": "q2",
     "statement": "2. I make my replies warm and personal",
-    "subtext": "I use their name and add helpful information"
+    "subtext": "I use their name and add helpful information",
+    "weight": 1.0
   },
   {
     "id": "q3",
     "statement": "3. I make a great first impression",
-    "subtext": "I know that starts from the very first message"
+    "subtext": "I know it starts with the first message",
+    "weight": 0.5
   },
   {
     "id": "q4",
     "statement": "4. I can see if a guest is stressed or relaxed",
-    "subtext": "I adjust the way I check-in to the mood"
+    "subtext": "I adjust the way I check-in to the mood",
+    "weight": 2.0
   },
   {
     "id": "q5",
     "statement": "5. I ask questions before I ask passports",
-    "subtext": "I welcome guests like friends"
+    "subtext": "I welcome guests like friends",
+    "weight": 2.0
   },
   {
     "id": "q6",
     "statement": "6. I can check-in a guest in 60 seconds",
-    "subtext": "I timed this three times with standard check-ins"
+    "subtext": "I timed three standard check-ins",
+    "weight": 1.0
   },
   {
     "id": "q7",
     "statement": "7. I check in groups differently than FIT",
-    "subtext": "I usually check-in groups with the leader"
+    "subtext": "I usually check-in groups with the leader",
+    "weight": 0.5
   },
   {
     "id": "q8",
-    "statement": "8. I don't tell guests that check-in time is 14:00",
-    "subtext": "They can check-in as soon as the room is ready"
+    "statement": "8. I don't say that check-in time is 14:00",
+    "subtext": "Guests can check-in when the room is ready",
+    "weight": 1.5
   },
   {
     "id": "q9",
-    "statement": "9. I don't show stress when there is a problem",
-    "subtext": "I know that makes guests really worry"
+    "statement": "9. I dont show stress when there is a problem",
+    "subtext": "I know that makes guests really worry",
+    "weight": 2.0
   },
   {
     "id": "q10",
     "statement": "10. I show genuine interest during check-out",
-    "subtext": "I ask about their stay or next destination"
+    "subtext": "I ask about their stay or next destination",
+    "weight": 1.0
   },
   {
     "id": "q11",
     "statement": "11. I make great last impressions",
-    "subtext": "I walk them out and wait until their car has left"
+    "subtext": "I walk them out and wait until their car has left",
+    "weight": 2.0
   },
   {
     "id": "q12",
     "statement": "12. I use names to connect with guests",
-    "subtext": "When it feels right I tell my name and use theirs"
+    "subtext": "When it feels right I introduce myself",
+    "weight": 0.5
   },
   {
     "id": "q13",
     "statement": "13. I scan every guest every time",
-    "subtext": "I don't look at a group but at each individual"
+    "subtext": "I dont look at a group but at each individual",
+    "weight": 2.0
   },
   {
     "id": "q14",
     "statement": "14. I am good at scanning",
-    "subtext": "I see what people need before they ask"
+    "subtext": "I see what people need before they ask",
+    "weight": 2.0
   },
   {
     "id": "q15",
     "statement": "15. I create unique surprises for guests",
-    "subtext": "I do more than offering free things"
+    "subtext": "I do more than offering free things",
+    "weight": 2.0
   },
   {
     "id": "q16",
     "statement": "16. Music is an essential part of the vibe",
-    "subtext": "I listen to make sure we play the right music"
+    "subtext": "I listen to make sure we play the right music",
+    "weight": 0.5
   },
   {
     "id": "q17",
-    "statement": "17. I invite guests to share other BED facilities",
-    "subtext": "I offer downtown coffee, bigger pool or breakfast"
+    "statement": "17. I tell guests they can use other BED facilities",
+    "subtext": "I offer downtown coffee, big pool or breakfast",
+    "weight": 1.5
   },
   {
     "id": "q18",
-    "statement": "18. its annoying when a room key doesn't work",
-    "subtext": "I go up to make sure the new key works"
+    "statement": "18. It's annoying when a room key doesn't work",
+    "subtext": "I go up to make sure the new key works",
+    "weight": 2.0
   },
   {
     "id": "q19",
     "statement": "19. I talk with guests because I am interested",
-    "subtext": "When I force myself it will not be real"
+    "subtext": "When I force myself it will not be real",
+    "weight": 1.0
   },
   {
     "id": "q20",
     "statement": "20. I often give my friends honest feedback",
-    "subtext": "I’m happy to help them to grow"
+    "subtext": "Im happy to help them to grow",
+    "weight": 1.5
   },
   {
     "id": "q21",
     "statement": "21. My friends often give me honest feedback",
-    "subtext": "I’m happy they help me to grow"
+    "subtext": "I'm happy they help me to grow",
+    "weight": 1.0
   },
   {
     "id": "q22",
     "statement": "22. I can answer most questions about BED",
-    "subtext": "I have visited the rooms in all our hotels"
+    "subtext": "I have visited the rooms in all our hotels",
+    "weight": 0.5
   },
   {
     "id": "q23",
-    "statement": "23. I understand the meaning of \"showtime\"",
-    "subtext": "The magic happens from 07:00-10:00"
+    "statement": "23. I understand the meaning of showtime",
+    "subtext": "The magic happens from 0700-1000",
+    "weight": 0.5
   },
   {
     "id": "q24",
-    "statement": "24. I know the story of \"peeling the onion\"",
-    "subtext": "I don't act. Usually I show my true self"
+    "statement": "24. I have peeled my own onion",
+    "subtext": "I dont act. Usually I show my true self",
+    "weight": 1.5
   },
   {
     "id": "q25",
-    "statement": "25. I never gossip. I signed “I Promise”",
-    "subtext": "I don't talk bad when someone's not here"
+    "statement": "25. I use ChatGPT or Gemini",
+    "subtext": "I ask for help with e.g., guest messages",
+    "weight": 0.5
   },
   {
     "id": "q26",
-    "statement": "26. I really understand that rules can be flexible",
-    "subtext": "Without reasons many rules just disappear"
+    "statement": "26. I send messages that look like I wrote them",
+    "subtext": "I don't copy AI because guests will know",
+    "weight": 1.5
   },
   {
     "id": "q27",
-    "statement": "27. I am confident about my own judgment",
-    "subtext": "I make decisions without asking permission"
+    "statement": "27. I use ChatGPT or Gemini",
+    "subtext": "I ask help to analyze and solve problems",
+    "weight": 1.5
   },
   {
     "id": "q28",
-    "statement": "28. I look after the rooms and public areas",
-    "subtext": "I share responsibility for the whole hotel"
+    "statement": "28. I never gossip. I signed I Promise",
+    "subtext": "I dont talk badly when someones not here",
+    "weight": 2.0
   },
   {
     "id": "q29",
-    "statement": "29. I look around when I arrive at the hotel",
-    "subtext": "I share responsibility for the whole hotel"
+    "statement": "29. I really understand that rules can be flexible",
+    "subtext": "Without reasons many rules just disappear",
+    "weight": 1.0
   },
   {
     "id": "q30",
-    "statement": "30. I don't pass problems to others but act myself",
-    "subtext": "I follow up later to make sure it's fixed"
+    "statement": "30. I am confident about my own judgment",
+    "subtext": "I make decisions without asking permission",
+    "weight": 1.0
   },
   {
     "id": "q31",
-    "statement": "31. I am not afraid of the CEO or my coach",
-    "subtext": "I know I am allowed to make mistakes"
+    "statement": "31. I look after the whole hotel, not only front",
+    "subtext": "I include rooms, maintenance and back areas",
+    "weight": 2.0
   },
   {
     "id": "q32",
-    "statement": "32. I have no manuals that show me what to do",
-    "subtext": "That means I cannot do anything wrong"
+    "statement": "32. I look around when I arrive at the hotel",
+    "subtext": "I share responsibility for the whole hotel",
+    "weight": 0.5
+  },
+  {
+    "id": "q33",
+    "statement": "33. I don't pass issues to others but act myself",
+    "subtext": "I follow up later to make sure it's fixed",
+    "weight": 1.0
+  },
+  {
+    "id": "q34",
+    "statement": "34. I am not afraid of the CEO or my coach",
+    "subtext": "I know I am allowed to make mistakes",
+    "weight": 1.0
+  },
+  {
+    "id": "q35",
+    "statement": "35. I have no manuals that show me what to do",
+    "subtext": "That means I cannot do anything wrong",
+    "weight": 0.5
   }
 ]</script>
 
